guix: Refactor package setup.
Next to the convenient environment setup and package build from git

   guix environment -l .guix.scm
   guix build -f .guix.scm

we can now also build other included packages

    GUIX_PACKAGE_PATH=guix guix build mes@0.17
    GUIX_PACKAGE_PATH=guix guix build nyacc@0.80.42

* guix/git/mes.scm: Move from .guix.scm, make a module.
* .guix.scm: Move from guix.scm, use it.
* build-aux/manifest.scm: Update location.
* build-aux/pre-inst-env.in: Support it.
* configure: Check for guix.
* build-aux/export.make: Export GUIX.
* GNUmakefile (update-hash): New target.

--- a/HACKING
+++ b/HACKING
@@ -1,11 +1,11 @@
 -*-mode:org-*-
 
 * SETUP
-    guix environment -l guix.scm     #64 bit + 32bit
+    guix environment -l .guix.scm     #64 bit + 32bit
 
 or
 
-    guix environment --system=i686-linux -l guix.scm #32 bit only
+    guix environment --system=i686-linux -l .guix.scm #32 bit only
 
 or
 
