--- a/INSTALL
+++ b/INSTALL
@@ -48,17 +48,17 @@ similar way.
 
 * Bootstrap build
 
-The bootstrap build is being developed in GuixSD, see
-https://gitlab.com/janneke/guix/blob/wip-bootstrap/gnu/packages/mes.scm
+The bootstrap build is being developed in Guix, on wip-bootstrap, see
+http://git.savannah.gnu.org/cgit/guix.git/tree/gnu/packages/mes.scm?h=wip-bootstrap
 
 ** Prerequisites
   - [[https://github.com/oriansj/mescc-tools][mescc-tools]], 0.5 is known to work.
   - [[https://savannah.gnu.org/projects/nyacc][Nyacc]], [[https://gitlab.com/janneke/nyacc][patched Nyacc]] 0.80.42 is known to work.
-  - [[https://gitlab.com/janneke/mes-seed][mes-seed]], 0.16 is known to work.
+  - [[https://gitlab.com/janneke/mes-seed][mes-seed]], 0.17 is known to work.
 
 ** Build it
    <setup environment, e.g. prefix, MES_SEED>
-
+   ./configure.sh [--prefix=<prefix>]
    ./build.sh
 
 ** Check it
