--- a/README
+++ b/README
@@ -8,25 +8,24 @@ source bootstrapping for GNU/Linux distributions such as
 [[https://www.gnu.org/software/guix][GuixSD]] as part of the
 [[http://bootstrappable.org][bootstrappable builds]] effort.
 
-It currently consists of a mutual self-hosting Scheme interpreter
-written in ~5,000 LOC of simple C and a Nyacc-based C compiler written
-in Scheme.  This mes.c is [[https://github.com/oriansj/mes-m2][being simplified]] to be transpiled by
-[[https://github.com/oriansj/m2-planet][M2-Planet]].
+It consists of a mutual self-hosting Scheme interpreter written in
+~5,000 LOC of simple C and a Nyacc-based C compiler written in Scheme.
+This mes.c is [[https://github.com/oriansj/mes-m2][being simplified]] to be transpiled by [[https://github.com/oriansj/m2-planet][M2-Planet]].
 
-The Scheme interpreter prototype (mes.c) has a Garbage Collector, a
-library of loadable Scheme modules-- notably Dominique Boucher's [[https://github.com/schemeway/lalr-scm][LALR]],
-Pre-R6RS [[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][portable syntax-case]] with R7RS ellipsis, Matt Wette's [[https://www.nongnu.org/nyacc][Nyacc]],
-Guile's [[https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html][PEG]] --and test suite just barely enough to support a simple
-REPL and simple C-compiler: MesCC.
+The Scheme interpreter (mes.c) has a Garbage Collector, a library of
+loadable Scheme modules-- notably Dominique Boucher's [[https://github.com/schemeway/lalr-scm][LALR]], Pre-R6RS
+[[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][portable syntax-case]] with R7RS ellipsis, Matt Wette's [[https://www.nongnu.org/nyacc][Nyacc]] --and test
+suite just barely enough to support a simple REPL and simple
+C-compiler: MesCC.
 
 Mes+MesCC can compile an only [[http://gitlab.com/janneke/tinycc][lightly patched TinyCC]] that is
 self-hosting.  Using this tcc and the Mes C library we now have a
 reduced-binary-seed bootstrap for the gnutools triplet: glibc-2.2.5,
-binutils-2.20.1, gcc-4.1.0.
+binutils-2.20.1, gcc-4.7.4.
 
-GNU Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%2525201.5%252520Programmers%252520Manual.pdf][LISP-1.5]] --
-John McCarthy page 13, GNU Guix's source/binary packaging transparency
-and Jeremiah Orians's [[https://github.com/oriansj/stage0][stage0]] ~500 byte self-hosting hex assembler.
+Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%201.5%20Programmers%20Manual.pdf][LISP-1.5]] -- John
+McCarthy page 13, GNU Guix's source/binary packaging transparency and
+Jeremiah Orians's [[https://github.com/oriansj/stage0][stage0]] ~500 byte self-hosting hex assembler.
 
 GNU Mes is free software, it is distributed under the terms of the GNU
 General Public Licence version 3 or later.  See the file [[file:COPYING][COPYING]].
