build: Generate gcc-mesboot-graph from .dot.
* doc/images/gcc-mesboot-graph.dot: New file.
* doc/images/gcc-mesboot-graph.png: Remove.
* GNUmakefile (${top_builddest}doc/images/gcc-mesboot-graph.png): New target.
* configure (det): Add check.
* build-aux/export.make: Export it.
* doc/mes.texi (The Mes Bootstrap Process): Describe new recipe.
* guix/git/mes.scm (mes): Add graphvis dependency.

--- a/doc/mes.texi
+++ b/doc/mes.texi
@@ -505,8 +505,8 @@ gcc-source + binutils + gcc-core + glibc => gcc
 
 @c sed -i s,package-with-bootstrap-guile,identity, gnu/packages/{commencement,mes}.scm
 
-@c ./pre-inst-env guix graph gcc-mesboot | dot -T png >
-@c gcc-mesboot-graph.png
+@c ~/src/guix-bootstrap/pre-inst-env guix graph gcc-mesboot > doc/images/gcc-mesboot-graph.dot
+@c dot -T png doc/images/gcc-mesboot-graph.dot > doc/images/gcc-mesboot-graph.png
 
 Here's a generated dependency diagram to give you impression, it is not
 complete or correct.
