--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,12 @@
+                                                              -*- org -*-
+#+TITLE: GNU Mes Authors
+
+Copyright © 2016, 2017,2018 Jan (janneke) Nieuwenhuizen <janneke@gnu.org>
+
+  Copying and distribution of this file, with or without modification,
+  are permitted in any medium without royalty provided the copyright
+  notice and this notice are preserved.
+
 Jan (janneke) Nieuwenhuizen <janneke@gnu.org>
 Main author
 All files except the imported files listed below
@@ -9,6 +18,9 @@ scaffold/tests/98-fopen.c
 Han-Wen Nienhuys <hanwen@xs4all.nl>
 lib/libc+tcc.c (_memmem, memmem)
 
+rain1
+scaffold/tests/90-goto-var.c
+scaffold/tests/91-goto-array.c
 
 List of imported files
 
