build: web: New target.
* README: Add bug-mes@gnu.org
* NEWS: Likewise.
* doc/mes.texi: Likewise.
* build-aux/gendocs.sh: New file, from gnulib.
* doc/gendocs_template: New file, from gnulib.
* build-aux/GNUmakefile.in (web): New target.

--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ Copyright © 2016,2017,2018 Jan (janneke) Nieuwenhuizen <janneke@gnu.org>
   are permitted in any medium without royalty provided the copyright
   notice and this notice are preserved.
 
-Please send Mes bug reports to janneke@gnu.org.
+Please send Mes bug reports to bug-mes@gnu.org.
 
 * Changes in 0.16.1 since 0.16
 ** Core
