--- a/HACKING
+++ b/HACKING
@@ -67,9 +67,8 @@ mes.c.
 ** TODO
 *** release 0.x, unsorted
   - upstream mes-boot to GuixSD.
-  - replace GuixSD bootstrap for x86.
   - replace bootstrap utils (with gash?): flex, bash, bzip2,
-    coreutils, diffutils, gawk, grep, gzip, make, sed, tar.
+    coreutils, gawk, grep, gzip, sed, tar.
   - tcc: remove or upstream patches from tcc-boot.
   - tcc: build 0.9.27 directly instead of via 0.9.26,
     see tinycc wip-bootstrappable@0.9.27 branch
@@ -101,6 +100,7 @@ mes.c.
   - add x86_64, replace GuixSD's bootstrap binaries for x86_64.
   - more architectures (does GuixSD require this, i.e. before 1.0?).
 ** DONE
+*** 0.17.1 GNU Mes now allows removing glibc, binutils and gcc from the GuixSD bootstrap.
 *** 0.17 GNU Mes is now an official GNU project and bootstraps gcc-4.7.4.
 *** 0.16.1 Mes now has info docs and installs ootb on Debian buster/testing.
 *** 0.16 Mes Lib C now bootstraps glibc-2.2.5, binutils-2.20.1, gcc-4.1.0.
